index.html save

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1 id="header">Calculator</h1>
         <div id="calc">
             <div id="display">
-                <h2 id="disp-text">0</h2>
+                <h2 id="num-disp">0</h2>
             </div>
             <div id="butt-cont">
                 <div class="col"></div>
