--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col">
-                    <div class="butt"><img id="bksp" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_411401.png&f=1&nofb=1"></div>
+                    <div class="butt"><img id="bksp" onclick="onBackspace()"
+                         src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_411401.png&f=1&nofb=1"></div>
                 </div>
             </div>
         </div>
